<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>compiler</groupId>
    <artifactId>flask-jinja2-compiler</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>Flask / Jinja2 / Python / CSS Compiler</name>
    <description>ANTLR4-based compiler for Flask applications with Jinja2 templates</description>

    <!-- ===================================================== -->
    <!-- Properties -->
    <!-- ===================================================== -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <antlr.version>4.13.2</antlr.version>
    </properties>
    <!-- ===================================================== -->
    <!-- Dependencies -->
    <!-- ===================================================== -->
    <dependencies>

        <!-- ANTLR Runtime -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <!-- Apache Commons -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>

    </dependencies>

    <!-- ===================================================== -->
    <!-- Build -->
    <!-- ===================================================== -->
    <build>
        <plugins>

            <!-- ============================================= -->
            <!-- ANTLR4 Maven Plugin (STANDARD CONFIGURATION) -->
            <!-- ============================================= -->
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr.version}</version>

                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>

                <configuration>
                    <sourceDirectory>src/main/antlr4/grammar</sourceDirectory>
                    <outputDirectory>target/generated-sources/antlr4/grammar</outputDirectory>
                    <visitor>true</visitor>
                    <listener>true</listener>
                    <treatWarningsAsErrors>false</treatWarningsAsErrors>
                </configuration>
            </plugin>


            <!-- ============================================= -->
            <!-- Maven Compiler Plugin -->
            <!-- ============================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!-- ============================================= -->
            <!-- Maven Surefire Plugin -->
            <!-- ============================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>compiler.Main</mainClass>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- ============================================= -->
            <!-- Maven Shade Plugin (Fat JAR) -->
            <!-- ============================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>

                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>

                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>compiler.Main</mainClass>
                                </transformer>
                            </transformers>
                            <finalName>flask-jinja2-compiler</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
